Removed yaml files no longer required, pwd set same for feb
Pwd for each neo4j deployment need to be the same. Remove the storage and load balancer yamls - no longer required

--- a/feb.yaml
+++ b/feb.yaml
@@ -6,7 +6,7 @@ neo4j:
   name: ""
 
   # If password is not set or empty a random password will be generated during installation
-  password: "nn330044ff"
+  password: "nn330044jj"
 
   # Neo4j Edition to use (community|enterprise)
   edition: "enterprise"
