--- a/aura-neo4j.conf
+++ b/aura-neo4j.conf
@@ -1,9 +1,9 @@
 #where to find neo4j dbms in Aura
-fabric.graph.0.uri: "neo4j+s://xxxxxxxx.databases.neo4j.io:7687"
+fabric.graph.0.uri="neo4j+s://xxxxxxxx.databases.neo4j.io:7687"
 #the database you want to use
-fabric.graph.0.database: "neo4j"
+fabric.graph.0.database="neo4j"
 #the name you want to refer to it when you do queries through fabric
-fabric.graph.0.name: "aura"
+fabric.graph.0.name="aura"
 
 
 #ssl settings for Aura - make sure the graph.number matches above
